--- a/README
+++ b/README
@@ -1,13 +1,13 @@
-##Script para migrar o armazenamento entre dois servidores supabase
+Script para migrar o armazenamento entre dois servidores supabase
 
-#Instalação e uso
+Instalação e uso:
 
-npm i
+ - npm install
 
-criar .env conforme o .example.env
+ - Criar .env conforme o .example.env
 
-rodar: npm run dev
+ - Rodar: npm run dev
 
-#Lembrete ! 
+Lembrete ! 
 
 No novo servidor, precisa ter criado o Bucket com o mesmo nome do servidor de origem
